Closed Bug 1195263 Opened 10 years ago Closed 10 years ago

ARM Instruction::extractCond might leave the out-param uninitialized.

Categories

(Core :: JavaScript Engine: JIT, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla43
Tracking Status
firefox43 --- fixed

People

(Reporter: nbp, Assigned: nbp)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

No description provided.
This modification pass the test suite with a debug build.
Attachment #8648699 - Flags: review?(hv1989)
Urgh, thank you. All of those hardcoded constants in extractCond() should probably have names, possibly defined in a v8-style "constants" file. Bug 1157934 is going to import the v8 constants file, maybe we could use those?
Attachment #8648699 - Flags: review?(hv1989) → review+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
Blocks: 1190294
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: